use env vars for server to ibc connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,10 @@ services:
         depends_on:
             - ib-gateway
         environment:
-            PORT: 8000
+            IBC_HOST: "ib-gateway"
+            IBC_PORT: 4004
+            IBC_CONN_TIMEOUT: 15
+            CLIENT_ID: 123
         ports:
             - "8000:8000"
         restart: always
