--- a/log.ini
+++ b/log.ini
@@ -17,7 +17,7 @@ format=%(levelname)s [%(thread)d] - %(message)s
 [handler_logfile]
 class=handlers.RotatingFileHandler
 level=INFO
-args=('logfile.log','a')
+args=('logs/logfile.log','a')
 formatter=logformatter
 
 [handler_logconsole]
