--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ certifi==2024.2.2
 click==8.1.7
 eventkit==1.0.3
 fastapi==0.110.0
+fastapi-restful==0.6.0
+fastapi-utils==0.6.0
+greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
@@ -11,18 +14,23 @@ httpx==0.27.0
 ib-insync==0.9.86
 idna==3.6
 install==1.3.5
+mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 numpy==1.26.4
 pandas==2.2.1
-pydantic==2.6.4
-pydantic_core==2.16.3
+psutil==5.9.8
+pydantic==2.7.3
+pydantic-settings==2.3.1
+pydantic_core==2.18.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 six==1.16.0
 sniffio==1.3.1
+SQLAlchemy==2.0.30
 starlette==0.36.3
+typing-inspect==0.9.0
 typing_extensions==4.10.0
 tzdata==2024.1
 uvicorn==0.29.0
