--- a/requirements.txt
+++ b/requirements.txt
@@ -18,13 +18,15 @@ nest-asyncio==1.6.0
 numpy==1.26.4
 pandas==2.2.1
 psutil==5.9.8
-pydantic==1.7.4
+pydantic==2.7.3
+pydantic_core==2.18.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 six==1.16.0
 sniffio==1.3.1
+SQLAlchemy==1.4.52
 starlette==0.36.3
 typing-inspect==0.9.0
 typing_extensions==4.10.0
